Few small updates